--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan's About
+title: Jonathan Rasmussen's About
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
