--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Jonathan Rasmussen
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hello there, I'm Jonathan Rasmussen!</h1>
+	<p>I'm a data scientist from Canada who is dedicated to self improvement and professional development. 
+		My <a href="/about">Life Experience</a></p> has taught me many things about Science, Mathematics, Philosphy, Social Studies, The Arts, and Physical/Mental Health. 
+		However, I recognize that there is so many more wonders of Humanity and the Universe to learn about. Therefore it is my personal mission to strive everday to be the
+		best version of myself and dedicate everday to knowledge, empathy, and the pursuit of happiness. 
 </div><!-- /.blurb -->
