--- a/index.html
+++ b/index.html
@@ -4,8 +4,5 @@ title: Jonathan Rasmussen
 ---
 <div class="blurb">
 	<h1>Hello there, I'm Jonathan Rasmussen!</h1>
-	<p>I'm a data scientist from Canada who is dedicated to self improvement and professional development. 
-		My <a href="/about">Life Experience</a></p> has taught me many things about Science, Mathematics, Philosphy, Social Studies, The Arts, and Physical/Mental Health. 
-		However, I recognize that there is so many more wonders of Humanity and the Universe to learn about. Therefore it is my personal mission to strive everday to be the
-		best version of myself and dedicate everday to knowledge, empathy, and the pursuit of happiness. 
+	<p>I'm a data scientist from Canada who is dedicated to self improvement and professional development. My <a href="/about">Life Experience</a></p> has taught me many things about Science, Mathematics, Philosphy, Social Studies, The Arts, and Physical/Mental Health. However, I recognize that there is so many more wonders of Humanity and the Universe to learn about. Therefore it is my personal mission to strive everday to be the best version of myself and dedicate everday to knowledge, empathy, and the pursuit of happiness. 
 </div><!-- /.blurb -->
