--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Hank Quinlan's CV
+title: Jonathan Rasmussen's CV
 ---
 	<h1>{{ page.title }}</h1>
 	<ul class="posts">
