--- a/cv/index.html
+++ b/cv/index.html
@@ -1,11 +1,9 @@
 ---
 layout: default
-title: Jonathan Rasmussen's CV
+title: Jonathan Rasmussen CV
 ---
-	<h1>{{ page.title }}</h1>
-	<ul class="posts">
-
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	  {% endfor %}
-	</ul>
+<div class="blurb">
+	<h1>Resume</h1>
+	<p>I'm a Canadian engineer working as a macine learning engineer. </p> 
+	<object data="../_pdf/Jonathan_Rasmussen.pdf" width="1000" height="1000" type='application/pdf'></object>
+</div><!-- /.blurb -->
