--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Jonathan Rasmussen, Data Science Enthusiast
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Jonathan Rasmussen!</h1>
+	<p>I'm a data scientist from Canada who seeks to develop himself physically, mentally, and intellectually. To explore some of my achievments please
+		<a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
