--- a/cv/index.html
+++ b/cv/index.html
@@ -5,5 +5,6 @@ title: Jonathan Rasmussen CV
 <div class="blurb">
 	<h1>Resume</h1>
 	<p>I'm a Canadian engineer working as a macine learning engineer. </p> 
-	<object data="../_pdf/Jonathan_Rasmussen.pdf" width="1000" height="1000" type='application/pdf'></object>
+	<embed src="https://github.com/jonathan-rasmussen/jonathan-rasmussen.github.io/blob/main/_pdf/Jonathan_Rasmussen.pdf" width="500" height="375" type="application/pdf">
+
 </div><!-- /.blurb -->
